Проверить AuthController и с ним связанные моменты в openapi.yaml
