# src/main/resources/static/openapi/openapi.yaml
@@ -1,221 +1,62 @@
 openapi: 3.1.0
 info:
   title: OpenAPI definition
-  version: v0
+  version: v1
+
 servers:
   - url: http://localhost:8080
     description: Generated server url
+
 paths:
+  /api/v1/admin/users:
+    $ref: './paths/admin-users.yaml'
+  /api/v1/admin/users/{userId}:
+    $ref: './paths/admin-user-by-id.yaml'
+
+  /api/v1/admin/cards:
+    $ref: './paths/admin-cards.yaml'
+  /api/v1/admin/cards/{cardId}:
+    $ref: './paths/admin-card-by-id.yaml'
+
+  /api/v1/users/me/cards:
+    $ref: './paths/user-cards.yaml'
+  /api/v1/users/me/cards/{cardId}:
+    $ref: './paths/user-cards-by-id.yaml'
+  /api/v1/users/me/cards/{cardId}/request-block:
+    $ref: './paths/user-cards-request-block.yaml'
+  /api/v1/users/me/cards/transfer:
+    $ref: './paths/user-cards-transfer.yaml'
+  /api/v1/users/me/cards/{cardId}/balance:
+    $ref: './paths/user-cards-balance.yaml'
+
+  /api/v1/users/me:
+    $ref: './paths/user-me.yaml'
+
   /api/v1/auth/signup:
-    post:
-      tags:
-        - auth-controller
-      operationId: signup
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/SignupUserRequest"
-        required: true
-      responses:
-        "400":
-          description: Bad Request
-          content:
-            'application/json':
-              schema:
-                type: object
-        "404":
-          description: Not Found
-          content:
-            'application/json':
-              schema:
-                type: object
-        "409":
-          description: Conflict
-          content:
-            'application/json':
-              schema:
-                type: object
-        "503":
-          description: Service Unavailable
-          content:
-            'application/json':
-              schema:
-                type: object
-        "401":
-          description: Unauthorized
-          content:
-            'application/json':
-              schema:
-                type: object
-        "200":
-          description: OK
-          content:
-            'application/json':
-              schema:
-                $ref: "#/components/schemas/GetCreatePatchUserResponse"
-  /api/v1/auth/refresh:
-    post:
-      tags:
-        - auth-controller
-      operationId: refresh
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/UpdateTokensRequest"
-        required: true
-      responses:
-        "400":
-          description: Bad Request
-          content:
-            'application/json':
-              schema:
-                type: object
-        "404":
-          description: Not Found
-          content:
-            'application/json':
-              schema:
-                type: object
-        "409":
-          description: Conflict
-          content:
-            'application/json':
-              schema:
-                type: object
-        "503":
-          description: Service Unavailable
-          content:
-            'application/json':
-              schema:
-                type: object
-        "401":
-          description: Unauthorized
-          content:
-            'application/json':
-              schema:
-                type: object
-        "200":
-          description: OK
-          content:
-            'application/json':
-              schema:
-                $ref: "#/components/schemas/AuthenticateRefreshUserResponse"
+    $ref: './paths/auth-signup.yaml'
   /api/v1/auth/login:
-    post:
-      tags:
-        - auth-controller
-      operationId: login
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/AuthenticateRequest"
-        required: true
-      responses:
-        "400":
-          description: Bad Request
-          content:
-            'application/json':
-              schema:
-                type: object
-        "404":
-          description: Not Found
-          content:
-            'application/json':
-              schema:
-                type: object
-        "409":
-          description: Conflict
-          content:
-            'application/json':
-              schema:
-                type: object
-        "503":
-          description: Service Unavailable
-          content:
-            'application/json':
-              schema:
-                type: object
-        "401":
-          description: Unauthorized
-          content:
-            'application/json':
-              schema:
-                type: object
-        "200":
-          description: OK
-          content:
-            'application/json':
-              schema:
-                $ref: "#/components/schemas/AuthenticateRefreshUserResponse"
-
-
+    $ref: './paths/auth-login.yaml'
+  /api/v1/auth/refresh:
+    $ref: './paths/auth-refresh.yaml'
 components:
   schemas:
-    SignupUserRequest:
-      type: object
-      properties:
-        fullName:
-          type: string
-          minLength: 1
-        email:
-          type: string
-          format: email
-          minLength: 1
-        password:
-          type: string
-          minLength: 1
-      required:
-        - email
-        - fullName
-        - password
-    UpdateTokensRequest:
-      type: object
-      properties:
-        refreshToken:
-          type: string
-    AuthenticateRefreshUserResponse:
-      type: object
-      properties:
-        accessToken:
-          type: string
-        refreshToken:
-          type: string
-    AuthenticateRequest:
-      type: object
-      properties:
-        email:
-          type: string
-          format: email
-          minLength: 1
-        password:
-          type: string
-          minLength: 1
-      required:
-        - email
-        - password
-    CardSpecification:
-      type: object
-      properties:
-        status:
-          type: string
-        userId:
-          type: integer
-          format: int64
-    UserSpecification:
-      type: object
-      properties:
-        email:
-          type: string
-        fullName:
-          type: string
-        id:
-          type: integer
-          format: int64
-        role:
-          type: string
-          enum:
-            - USER
-            - ADMIN
+    GetCreatePatchUserResponse:
+      $ref: './components/schemas/user.yaml#/GetCreatePatchUserResponse'
+    PatchUserRequest:
+      $ref: './components/schemas/user.yaml#/PatchUserRequest'
+    PagedModelGetCreatePatchUserResponse:
+      $ref: './components/schemas/user.yaml#/PagedModelGetCreatePatchUserResponse'
+    PageMetadata:
+      $ref: './components/schemas/common.yaml#/PageMetadata'
+    GetBalance:
+      $ref: './components/schemas/common.yaml#/GetBalance'
+    TransferBetweenCardsRequest:
+      $ref: './components/schemas/card.yaml#/TransferBetweenCardsRequest'
+    CreateCardRequest:
+      $ref: './components/schemas/card.yaml#/CreateCardRequest'
+    GetCreatePatchCardResponse:
+      $ref: './components/schemas/card.yaml#/GetCreatePatchCardResponse'
+    UpdateStatusCardRequest:
+      $ref: './components/schemas/card.yaml#/UpdateStatusCardRequest'
+    PagedModelGetCreatePatchCardResponse:
+      $ref: './components/schemas/card.yaml#/PagedModelGetCreatePatchCardResponse'
